delete lombok and added postgresql driver